outputs/tsp_aco-aco/2026-03-07_19-37-45/problem_iter5_response4.txt_stdout.txt
Traceback (most recent call last):
  File "D:\reevo/problems/tsp_aco/eval.py", line 20, in <module>
    import gpt
  File "D:\reevo\problems\tsp_aco\gpt.py", line 532
    threshold = np.percentile(H[H > 0], 25)  Keep top 75%
                                             ^^^^
SyntaxError: invalid syntax
